--- a/baseline-el8/tasks/dnf_update.yml
+++ b/baseline-el8/tasks/dnf_update.yml
@@ -62,6 +62,7 @@
         - opensc
         - esc
         - lshw
+        - mailx
       state: present
       disable_gpg_check: yes
     #ignore_errors: yes
