--- a/pi/files/snmpd.conf
+++ b/pi/files/snmpd.conf
@@ -1,14 +1,14 @@
 ###############################################################################
 #
 # snmpd.conf:
-#   Hohenfels/KJETT SNMP Configuration.
+#   Hohenfels/Hohenfelsjoe SNMP Configuration.
 #
 ###############################################################################
 agentaddress udp:161
 #       sec.name            source          community
  
-com2sec Hohenfels_Network   192.168.1.0/24      LAN
-com2sec Hohenfels_Network   172.16.4.0/24       DMZ
+com2sec InternalNetwork   192.168.1.0/24      LAN
+com2sec InternalNetwork   172.16.4.0/24       DMZ
 com2sec local               localhost           Local
  
 #       groupName       securityModel   securityName
@@ -26,8 +26,8 @@ view    systemview    included   .1
 access  ReadOnlyGroup    ""      any       noauth    exact  systemview   none    none
  
 #               System information
-syslocation     Lexington, TX
-syscontact      erik@hq6.hohenfels.com
+syslocation     NoneYa
+syscontact      root@localhost
 
 #This line allows Observium to detect the host OS if the distro script is installed
 extend .1.3.6.1.4.1.2021.7890.1 distro /usr/bin/distro
