--- a/pi/tasks/share.yml
+++ b/pi/tasks/share.yml
@@ -19,8 +19,8 @@
 
   - name: nfs.yml - Get Secret
     copy:
-        src: /home/erik/.smbcredentials
-        dest: /home/erik/.smbcredentials
+        src: ~/.smbcredentials
+        dest: ~/.smbcredentials
         owner: erik
         group: erik
         mode: 0600
