--- a/Extras/clean_media.yml
+++ b/Extras/clean_media.yml
@@ -1,10 +1,10 @@
 # Ansible Playbook 
 #
 ---
-- name: Clean Images Directory
+- name: Clean Media Directory
   hosts: all
   tasks:
 
-    - name: clean_Images.yml - remove exif data
+    - name: clean_media.yml - remove exif data
       command: exiftool -progress -r -overwrite_original -all= -copyright="NONEYA LLC" /mnt/share/Tmp/Clean
       
