--- a/Extras/lamp-el8.yml
+++ b/Extras/lamp-el8.yml
@@ -81,7 +81,7 @@
       path: /var/www/html/test.php
       create: yes
       backup: yes
-      marker: "{mark} Test Page!"
+      marker: "{mark} PHP Test Page!"
       owner: apache
       group: apache
       mode: 0644
