--- a/baseline-el8/files/el8/etc/dnf/dnf.conf
+++ b/baseline-el8/files/el8/etc/dnf/dnf.conf
@@ -4,7 +4,7 @@ installonly_limit=3
 clean_requirements_on_remove=True
 best=True
 # Need to be excluden until nodigest is fixed
-exclude=BESAgent* nimsoft-robot vagent venafi-agent
+# exclude=
 
 #Added by VA Security
 localpkg_gpgcheck=1
