--- a/baseline-el8/files/el8/etc/chrony.conf
+++ b/baseline-el8/files/el8/etc/chrony.conf
@@ -1,8 +1,8 @@
 # These servers were defined in the installation:
-server 0.centos.pool.ntp.org iburst
-server 1.centos.pool.ntp.org iburst
-server 2.centos.pool.ntp.org iburst
-server 3.centos.pool.ntp.org iburst
+server 0.redhat.pool.ntp.org iburst
+server 1.redhat.pool.ntp.org iburst
+server 2.redhat.pool.ntp.org iburst
+server 3.redhat.pool.ntp.org iburst
 
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
