--- a/pi/files/snmpd.conf
+++ b/pi/files/snmpd.conf
@@ -9,7 +9,7 @@ agentaddress udp:161
  
 com2sec InternalNetwork   192.168.1.0/24      LAN
 com2sec InternalNetwork   172.16.4.0/24       DMZ
-com2sec local               localhost           Local
+com2sec local             localhost           Local
  
 #       groupName       securityModel   securityName
 group   ReadOnlyGroup    v2c            Hohenfels_Network
@@ -26,8 +26,8 @@ view    systemview    included   .1
 access  ReadOnlyGroup    ""      any       noauth    exact  systemview   none    none
  
 #               System information
-syslocation     NoneYa
-syscontact      root@localhost
+syslocation     Lexington, TX
+syscontact      erik@viking-1.hohenfels.com
 
 #This line allows Observium to detect the host OS if the distro script is installed
 extend .1.3.6.1.4.1.2021.7890.1 distro /usr/bin/distro
