--- a/pi/tasks/share.yml
+++ b/pi/tasks/share.yml
@@ -20,7 +20,7 @@
   - name: nfs.yml - Get Secret
     copy:
         src: ../files/smbcredentials
-        dest: ~/.smbcredentials
+        dest: /home/erik/.smbcredentials
         owner: erik
         group: erik
         mode: 0600
