--- a/ubuntu/tasks/lamp.yml
+++ b/ubuntu/tasks/lamp.yml
@@ -1,4 +1,8 @@
 ---
+- name: Install LAMP
+  hosts: all
+  tasks:
+  
   - name: Install the LAMP packages
     action: >
       {{ ansible_pkg_mgr }} name={{ item }} state=present update_cache=yes
