--- a/Extras/lamp-Ubuntu.yml
+++ b/Extras/lamp-Ubuntu.yml
@@ -14,6 +14,11 @@
       - mariadb-client
       - php-mysql
       - phpmyadmin
+      - php-mbstring 
+      - php-zip 
+      - php-gd 
+      - php-json 
+      - php-curl
 
   - name: Create Test Page
     blockinfile: 
@@ -32,7 +37,7 @@
       name: apache2
       enabled: true
       state: started
-      
+
   - name: mariadb enabled and running
     service:
       name: mariadb
