--- a/Extras/clean_all_media.yml
+++ b/Extras/clean_all_media.yml
@@ -34,4 +34,10 @@
       ignore_errors: yes
       tags:
       - videos
+
+    - name: clean_media.yml - remove exif data
+      command: exiftool -progress -r -overwrite_original -all= -copyright="NONEYA LLC" /mnt/share/Tmp/Clean
+      ignore_errors: yes
+      tags:
+      - tmp
       
