--- a/ubuntu/files/snmpd.conf
+++ b/ubuntu/files/snmpd.conf
@@ -6,13 +6,10 @@
 ###############################################################################
 agentaddress udp:161
 #       sec.name            source          community
- 
-com2sec InternalNetwork   192.168.1.0/24      LAN
-com2sec InternalNetwork   172.16.4.0/24       DMZ
-com2sec local               localhost           Local
+rocommunity          DMZ             172.16.4.53
  
 #       groupName       securityModel   securityName
-group   ReadOnlyGroup    v2c            Hohenfels_Network
+group   ReadOnlyGroup    v2c            rocommunity
 group   ReadOnlyGroup    v2c            local
  
  
