--- a/pi/tasks/erik.yml
+++ b/pi/tasks/erik.yml
@@ -23,6 +23,8 @@
         - bc
         - logwatch
         - clamav
+        - guake
+        - openssh-server
       state: latest
       
   - name: erik.yml - Copy vimrc
